# lifey

./: PRD.md  README.md  backlog.json  backlog.md  datamodel.md  sprintplan.md
alo_backend/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  init_db.py  init_db.sh  migrate.sh  pyproject.toml  requirements-dev.txt  requirements.txt  reset_dev.sh  run.py  run_dev.sh  setup.cfg  setup.py  stop_dev.sh  wsgi.py
alo_backend/alembic/: env.py
alo_backend/app/: init_db.py  main.py
alo_backend/app/api/: deps.py
alo_backend/app/api/api_v1/: api.py
alo_backend/app/api/api_v1/endpoints/: __init__.py  auth.py  events.py  reminders.py  users.py
alo_backend/app/core/: config.py  database.py  security.py  utils.py
alo_backend/app/models/: __init__.py  base.py  event.py  reminder.py  user.py
alo_backend/app/schemas/: __init__.py  event.py  reminder.py  token.py  user.py
